Remove the gettting started stuff.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   <p style=''>
     Like a modern code version of the mythical beast with 100 serpent heads, Typhoeus runs HTTP requests in parallel while cleanly encapsulating handling logic.
   </p>
-  <a class='btn btn-primary btn-large' href='/articles/getting_started.html'>Get Started! »</a>
+  <a class='btn btn-primary btn-large' href='https://github.com/typhoeus/typhoeus#typhoeus'>Get Started! »</a>
   <a class='btn btn-large' href='http://groups.google.com/group/typhoeus'>Join the Mailing List »</a>
   <a class='btn btn-large' href='http://github.com/typhoeus/typhoeus'>Contribute »</a>
 </div>
